--- a/index.html
+++ b/index.html
@@ -1,1 +1,181 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Matchmaker ❤️</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffebee;
+            margin: 0;
+            padding: 20px;
+            color: #333;
+            text-align: center;
+        }
+        h1 {
+            color: #e91e63;
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+        .statement {
+            background: #ffffff;
+            border-radius: 8px;
+            padding: 15px;
+            margin: 15px 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        select {
+            padding: 10px;
+            margin-top: 10px;
+            border-radius: 4px;
+            border: 1px solid #e91e63;
+            width: 100%;
+        }
+        button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #e91e63;
+            border: none;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            margin-top: 20px;
+        }
+        button:hover {
+            background-color: #d81b60;
+        }
+        #compatibility {
+            font-size: 20px;
+            margin-top: 20px;
+            color: #e91e63;
+        }
+        .error {
+            color: red;
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Matchmaker ❤️</h1>
+    <p>Rate the following statements on a scale of 1 to 5:</p>
 
+    <div class="statement">
+        <label>Harry Potter is a good movie series.</label><br />
+        <select id="q1">
+            <option value="">Select...</option>
+            <option value="5">Strongly Agree</option>
+            <option value="4">Agree</option>
+            <option value="3">Neither agree nor disagree</option>
+            <option value="2">Disagree</option>
+            <option value="1">Strongly Disagree</option>
+        </select>
+        <p class="error" id="error-q1"></p>
+    </div>
+
+    <div class="statement">
+        <label>Dogs are better than cats.</label><br />
+        <select id="q2">
+            <option value="">Select...</option>
+            <option value="5">Strongly Agree</option>
+            <option value="4">Agree</option>
+            <option value="3">Neither agree nor disagree</option>
+            <option value="2">Disagree</option>
+            <option value="1">Strongly Disagree</option>
+        </select>
+        <p class="error" id="error-q2"></p>
+    </div>
+
+    <div class="statement">
+        <label>Bees are the most annoying insect.</label><br />
+        <select id="q3">
+            <option value="">Select...</option>
+            <option value="5">Strongly Agree</option>
+            <option value="4">Agree</option>
+            <option value="3">Neither agree nor disagree</option>
+            <option value="2">Disagree</option>
+            <option value="1">Strongly Disagree</option>
+        </select>
+        <p class="error" id="error-q3"></p>
+    </div>
+
+    <div class="statement">
+        <label>Basketball is the best sport.</label><br />
+        <select id="q4">
+            <option value="">Select...</option>
+            <option value="5">Strongly Agree</option>
+            <option value="4">Agree</option>
+            <option value="3">Neither agree nor disagree</option>
+            <option value="2">Disagree</option>
+            <option value="1">Strongly Disagree</option>
+        </select>
+        <p class="error" id="error-q4"></p>
+    </div>
+
+    <div class="statement">
+        <label>Swimming is really fun.</label><br />
+        <select id="q5">
+            <option value="">Select...</option>
+            <option value="5">Strongly Agree</option>
+            <option value="4">Agree</option>
+            <option value="3">Neither agree nor disagree</option>
+            <option value="2">Disagree</option>
+            <option value="1">Strongly Disagree</option>
+        </select>
+        <p class="error" id="error-q5"></p>
+    </div>
+
+    <button onclick="calculateCompatibility()">Calculate Compatibility</button>
+    <p id="compatibility"></p>
+
+    <script>
+        const MAX_SCORE = 5;
+        const MIN_SCORE = 1;
+        const TOTAL_QUESTIONS = 5;
+
+        function validate() {
+            let isValid = true;
+            for (let i = 1; i <= TOTAL_QUESTIONS; i++) {
+                const selectElement = document.getElementById(`q${i}`);
+                const errorElement = document.getElementById(`error-q${i}`);
+                if (selectElement.value === "") {
+                    errorElement.textContent = "Please select a rating.";
+                    isValid = false;
+                } else {
+                    errorElement.textContent = "";
+                }
+            }
+            return isValid;
+        }
+
+        function calculateCompatibility() {
+            if (!validate()) return;
+
+            let totalScore = 0;
+            let scoresSummary = [];
+
+            for (let i = 1; i <= TOTAL_QUESTIONS; i++) {
+                const score = parseInt(document.getElementById(`q${i}`).value);
+                totalScore += score;
+                scoresSummary.push(`Statement ${i}: ${score}`);
+            }
+
+            const compatibility = (totalScore / (TOTAL_QUESTIONS * MAX_SCORE)) * 100;
+            document.getElementById("compatibility").innerHTML = `Your compatibility is: ${compatibility.toFixed(2)}% ❤️`;
+            alert(`Scores Summary:\n${scoresSummary.join('\n')}\n\nOverall Compatibility: ${compatibility.toFixed(2)}%`);
+
+            let remark = "";
+            if (compatibility > 80) {
+                remark = "You're a perfect match! ❤️";
+            } else if (compatibility > 50) {
+                remark = "You have good compatibility! 💕";
+            } else {
+                remark = "There's room for improvement! 🤔";
+            }
+            document.getElementById("compatibility").innerHTML += `<br>${remark}`;
+        }
+    </script>
+</body>
+</html>
